<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context=".MainActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/colorAccent"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
    </android.support.v7.widget.Toolbar>
    <TextView
        android:id="@+id/mainTitle"
        android:text="@string/default_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="normal" />
    <RelativeLayout
        android:layout_marginTop="200dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageButton
            android:contentDescription="@string/tap_on_tts"
            android:id="@+id/btnTTS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_play_arrow_white_36dp"
            android:background="@null"/>
        <TextView
            android:id="@+id/textTTS"
            android:layout_below="@id/btnTTS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/tap_on_tts"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="normal" />
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/imageTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="70dp"
        android:gravity="center"
        android:orientation="horizontal" >
        <ImageButton
            android:contentDescription="@string/app_name"
            android:id="@+id/btnPen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:layout_weight="0.3"
            android:src="@drawable/ic_create_white_36dp" />
        <ImageButton
            android:contentDescription="@string/app_name"
            android:id="@+id/btnSpeak"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:layout_weight="0.3"
            android:src="@drawable/ic_keyboard_voice_white_36dp" />
        <ImageButton
            android:contentDescription="@string/app_name"
            android:id="@+id/btnCam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:layout_weight="0.3"
            android:src="@drawable/ic_photo_camera_white_36dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:layout_marginBottom="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/textPen"
            android:layout_weight="0.3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tap_on_pen"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="13sp"
            android:textStyle="normal"/>
        <TextView
            android:id="@+id/textSpeak"
            android:layout_weight="0.3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tap_on_mic"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="13sp"
            android:textStyle="normal"/>
        <TextView
            android:id="@+id/textCam"
            android:layout_weight="0.3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tap_on_camera"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="13sp"
            android:textStyle="normal"/>
    </LinearLayout>
</RelativeLayout>